<resources>
    <string name="app_name">SC2006_Project</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">click_to_login</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="car_number_plate">Car Number Plate</string>
    <string name="create_account"><u>Create New Account</u></string>
    <string name="forget_password"><u>Forget Password</u></string>
</resources>