<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".boundary.Login">


    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />
    <!--EMAIL-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/emailLogin"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.google.android.material.textfield.TextInputLayout>
    <!--EMAIL-->
    <!--PASSWORD-->
    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/passwordLogin"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <!--PASSWORD-->

    <Button
        android:id="@+id/btn_login"
        android:text="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/registerNow"
        android:text="Dont have account? Click here to register"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView

        android:text="Forgot your password? Click here"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>




</LinearLayout>